# aardvark-dns

./: .cirrus.yml  .gitignore  .packit-copr-rpm.sh  .packit.sh  .packit.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRO_PACKAGE.md  Makefile  OWNERS  README.md  RELEASE_NOTES.md  aardvark-dns.spec.rpkg  build.rs  config.md  run-ci.sh
.autocopr/: aardvark-dns.spec
.github/: CODEOWNERS  renovate.json5
.github/workflows/: check_cirrus_cron.yml  release.yml  rerun_cirrus_cron.yml
contrib/cirrus/: lib.sh  netavark_cache_groom.sh  runner.sh  setup.sh
contrib/perf/: nslookup.py  run.sh
docs/: publish-crate.md
hack/: get_ci_vm.sh  tree_status.sh
plans/: all.fmf  main.fmf  prepare.sh
rpm/: aardvark-dns.spec  update-spec-provides.sh
src/: error.rs  lib.rs  main.rs
src/backend/: mod.rs
src/commands/: mod.rs  run.rs  version.rs
src/config/: constants.rs  mod.rs
src/dns/: coredns.rs  mod.rs
src/server/: mod.rs  serve.rs
src/test/: test.rs
src/test/config/: podman  podman2  test1
src/test/config/network_scoped_custom_dns/: podman
src/test/config/podman/: podman
src/test/config/podman_bad_config/: podman
src/test/config/podman_custom_dns_servers/: podman
src/test/config/podman_v6_entries/: podman_v6_entries  podman_v6_entries_proper
src/utils/: mod.rs
test/: 100-basic-name-resolution.bats  200-two-networks.bats  300-three-networks.bats  400-aliases.bats  500-reverse-lookups.bats  600-errors.bats  700-process-startup.bats  dnsmasq.conf  helpers.bash
test/tmt/: main.fmf  test_integration.sh  tests.sh
